--- a/petshopapp/package.json
+++ b/petshopapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.3",
     "react": "^19.1.0",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
